[gd_scene load_steps=13 format=3 uid="uid://co1tpwdpfc23o"]

[ext_resource type="Script" path="res://UI_init.gd" id="1_j44u1"]
[ext_resource type="Script" path="res://Storyteller.gd" id="2_qy66y"]
[ext_resource type="Script" path="res://PlayerDataObject.gd" id="3_v1l3t"]
[ext_resource type="Script" path="res://WorldMechanics.gd" id="4_bosov"]
[ext_resource type="Script" path="res://StatsPanel.gd" id="5_0jc0r"]
[ext_resource type="Script" path="res://StatGainPopup.gd" id="5_4d2oi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c2i6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ttloa"]
bg_color = Color(0.870588, 0, 0.0627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wdmpq"]
bg_color = Color(0.337255, 0.701961, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exy8d"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bs6mu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8t1ra"]
bg_color = Color(0.458824, 0.592157, 0.894118, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_j44u1")
distance_from_safehouse = 1950

[node name="explore_suburban_wasteland" type="Button" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 203.0
offset_right = 263.0
offset_bottom = 234.0
text = "Explore Suburban Wasteland"

[node name="explore_city_core" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 115.0
offset_top = 246.0
offset_right = 282.0
offset_bottom = 277.0
text = "Explore city core"

[node name="explore_wildlands" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 101.0
offset_top = 293.0
offset_right = 294.0
offset_bottom = 324.0
text = "Explore the wildlands"

[node name="return_from_wasteland" type="Button" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 372.0
offset_right = 306.0
offset_bottom = 403.0
text = "Stop exploring
"

[node name="Storyteller" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 638.0
offset_top = 136.0
offset_right = 932.0
offset_bottom = 373.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3c2i6")
bbcode_enabled = true
text = "Storyteller
"
scroll_following = true
script = ExtResource("2_qy66y")

[node name="ExplorationTickTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = 430.0
offset_right = 230.0
offset_bottom = 476.0
theme_override_styles/background = SubResource("StyleBoxFlat_ttloa")
theme_override_styles/fill = SubResource("StyleBoxFlat_wdmpq")
max_value = 10.0
step = 1.0
value = 5.0
show_percentage = false
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 0
offset_right = 136.0
offset_bottom = 42.0
text = "Health
5/10
"
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 123.0
offset_right = 259.0
offset_bottom = 172.0
theme_override_styles/normal = SubResource("StyleBoxFlat_exy8d")
text = "Distance from safehouse:
 "

[node name="RestButton" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 201.0
offset_right = 64.0
offset_bottom = 232.0
text = "Rest"

[node name="PlayerDataObject" type="Node" parent="."]
script = ExtResource("3_v1l3t")

[node name="WorldMechanics" type="Node" parent="."]
script = ExtResource("4_bosov")

[node name="ShowStatsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 85.0
offset_right = 504.0
offset_bottom = 116.0
text = "Show Stats "

[node name="StatsPanel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 333.0
offset_top = 119.0
offset_right = 574.0
offset_bottom = 390.0
theme_override_styles/normal = SubResource("StyleBoxFlat_bs6mu")
script = ExtResource("5_0jc0r")

[node name="StatGainPopup" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 497.0
offset_top = 423.0
offset_right = 678.0
offset_bottom = 515.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_8t1ra")
text = "+7 strenght"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_4d2oi")

[node name="StatGainPopupHideTimer" type="Timer" parent="StatGainPopup"]
wait_time = 3.0

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]

[connection signal="pressed" from="explore_suburban_wasteland" to="." method="_on_explore_suburban_wasteland_pressed"]
[connection signal="pressed" from="explore_city_core" to="." method="_on_explore_city_core_pressed"]
[connection signal="pressed" from="explore_wildlands" to="." method="_on_explore_wildlands_pressed"]
[connection signal="pressed" from="return_from_wasteland" to="." method="_on_return_from_wasteland_pressed"]
[connection signal="timeout" from="ExplorationTickTimer" to="." method="_on_exploration_tick_timer_timeout"]
[connection signal="pressed" from="RestButton" to="." method="_on_rest_button_pressed"]
[connection signal="pressed" from="ShowStatsButton" to="StatsPanel" method="_on_show_stats_button_pressed"]
[connection signal="timeout" from="StatGainPopup/StatGainPopupHideTimer" to="StatGainPopup" method="_on_stat_gain_popup_hide_timer_timeout"]
